# dresscode-back

./: .gitignore  README.md  alembic.ini  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1ae2c27b40b7_add_admin_module.py  a1f2c3d4e5f6_add_dress_and_media.py  a9b0c1d2e3f4_add_profile_name.py  b0c1d2e3f4a5_add_event_weather_summary.py  b2e3f4a5c6d7_add_event.py  c1d2e3f4a5b6_add_outfit_table.py  c3d4e5f6a7b8_add_socks_category.py  d2e3f4a5b6c7_add_jobs_and_notifications.py  d4e5f6a7b8c9_add_email_verification.py  e36451012bcc_init.py  f7a8b9c0d1e2_add_profile_and_personal_styles.py
src/admin/: dependencies.py  models.py  router.py  service.py
src/ai/: client.py  dependencies.py  outfit_service.py  prompts.py  schemas.py  service.py  tasks.py  tool_runner.py
src/ai/tools/: __init__.py  weather.py
src/auth/: constants.py  dependencies.py  models.py  router.py  service.py  utils.py
src/core/: celery_app.py  config.py  dependencies.py  exceptions.py  middlewares.py  models.py  pagination.py
src/dress/: dependencies.py  models.py  router.py  service.py
src/event/: cities.py  dependencies.py  models.py  router.py  season.py  service.py
src/jobs/: dependencies.py  enqueue.py  models.py  router.py  service.py  tasks.py
src/media/: dependencies.py  models.py  router.py  service.py
src/notifications/: dependencies.py  models.py  push.py  router.py  service.py
src/outfit/: dependencies.py  models.py  router.py  service.py
src/profile/: dependencies.py  models.py  router.py  service.py
src/scripts/: seed.py
