[project]
name = "dresscode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.136.1",
    "firebase-admin>=6.6.0",
    "google-genai>=1.0.0",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "pillow>=10.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis>=5.2.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
